src/objects/Accounting_Paymentrecord__c.object
<CustomObject>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHq India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>payment_method</label>
        <referenceTo>Accounting_PaymentMethod__c</referenceTo>
        <relationshipLabel>Accounting_Paymentrecord</relationshipLabel>
        <relationshipName>Accounting_Paymentrecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>transaction_id__c</fullName>
        <label>transaction_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_Paymentrecord</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_Paymentrecord</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>